# youtube-lounge-rs

./: .gitignore  .markdownlint.json  .mega-linter.yml  .pre-commit-config.yaml  .releaserc  API-Remote-Core.md  API-TV-Client.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Discovery.md  Introduction.md  LICENSE  Postman-Collection.md  README.md  package-lock.json  package.json
.githooks/: pre-commit
.github/: changelog-config.json  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/linters/: .cspell.json  .jscpd.json  .markdown-link-check.json
.github/workflows/: audit-dependencies.yml  ci.yml  mega-linter.yml  release-orchestrator.yml  release.yml
examples/: advanced_example.rs  advanced_usage.rs  basic_example.rs  basic_usage.rs
loungedocs/: API-Remote-Commands.md  API-Remote-Core.md  API-Remote-Events.md  API-TV-Client.md  API-TV.md  Discovery.md  Introduction.md  Postman-Collection.md  README.md
src/: client.rs  codec.rs  commands.rs  error.rs  events.rs  lib.rs  models.rs  session.rs  settings.rs  state.rs  utils.rs
src/utils/: macros.rs  mod.rs  parsing.rs  state.rs
tests/: client_tests.rs  core_tests.rs  error_tests.rs  events_tests.rs  models_tests.rs  token_refresh_tests.rs
