[package]
name = "youtube_lounge_rs"
version = "4.0.0"
edition = "2021"
authors = ["Anonymous <anon@example.com>"]
description = "A Rust client for the YouTube Lounge API to control YouTube on TV devices"
license = "CC-BY-NC-4.0"
repository = "https://github.com/bertybuttface/youtube-lounge-rs"
documentation = "https://docs.rs/youtube-lounge-rs"
readme = "README.md"
keywords = ["youtube", "api", "client", "tv", "remote"]
categories = ["api-bindings", "multimedia"]
exclude = [
    ".github/",
    "tests/",
    "examples/",
    "youtube_auth.json"
]

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
urlencoding = "2.1"
bytes = "1.0"
once_cell = "1.20"
uuid = { version = "1.5", features = ["v4"] }
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
serde = { version = "1.0", features = ["derive"] }
mockall = "0.11"
tracing-subscriber = "0.3"
fs2 = "0.4.3"
lazy_static = "1.4.0"
