[package]
name = "youtube_lounge_rs"
version = "8.0.7"
edition = "2021"
authors = ["Anonymous <anon@example.com>"]
description = "A Rust client for the YouTube Lounge API to control YouTube on TV devices"
license = "CC-BY-NC-4.0"
repository = "https://github.com/bertybuttface/youtube-lounge-rs"
documentation = "https://docs.rs/youtube-lounge-rs"
readme = "README.md"
keywords = ["youtube", "api", "client", "tv", "remote"]
categories = ["api-bindings", "multimedia"]
include = [
    "src/**/*",
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "CHANGELOG.md"
]

[dependencies]
bytes = "1.0"
dotenvy = "0.15"
futures = "0.3"
lazy_static = "1"
once_cell = "1.20"
rand = { version = "0.9" }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread", "macros", "signal"] }
tokio-util = { version = "0.7", features = ["codec"] }
uuid = { version = "1.5", features = ["v4"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = "0.3"
fs2 = "0.4.3"
lazy_static = "1.4.0"
